--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -21726,7 +21726,7 @@
                         </div>
                       </div>
                     </li>
-                    <li aria-hidden="false" data-key="783153817" class="carousel-slider__item" style="border-width: 0px 5px;">
+                    <li aria-hidden="true" data-key="783153817" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="783153817" class="h-full">
                         <div class="_onta11">
                           <div class="_vzls2v">
