--- a/help/help.html
+++ b/help/help.html
@@ -523,6 +523,16 @@
                                   </div>
                                 </div>
                                 <div class="_1wadwfl"></div>
+                                <button type="button" class="_tfpul05 hidden" data-testid="scroll-back-button">
+                                  <div style="background-color: white;">
+                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="scroll tabs backward" role="img" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"><g fill="none"><path d="m20 28-11.29289322-11.2928932c-.39052429-.3905243-.39052429-1.0236893 0-1.4142136l11.29289322-11.2928932"></path></g></svg>
+                                  </div>
+                                </button>
+                                <button type="button" class="_1i9dva05" data-testid="scroll-forward-button">
+                                  <div style="background-color: white;">
+                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-label="scroll tabs forward" role="img" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"> <g fill="none"><path d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"></path></g></svg>
+                                  </div>
+                                 </button>
                               </div>
                               <div>
                                 <div
