fx no.2 C - Full width

--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -322,6 +322,7 @@
                         <a
                           href="property-type-group.html"
                           class="become-a-host__footer-lets-go w-full"
+                          style="width: 100% !important;"
                           ><span class="become-a-host__lets-go-wrapper"
                             ><span
                               class="become-a-host__lets-go-btn"
