--- a/listings-product/contact-host.html
+++ b/listings-product/contact-host.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../dist/gbertl.css">
     <title>Contact Rinaldo - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -614,7 +615,7 @@
                                                 </div>
                                                 <a
                                                   data-testid="message-host-button"
-                                                  href="/contact_host/16354372/send_message/SEND_MESSAGE"
+                                                  href="contact-host-message.html"
                                                   class="btn-dark"
                                                   >Message host</a
                                                 >
@@ -2104,6 +2105,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
+                                                <div data-plugin-in-point-id="TEXT_AREA" data-section-id="TEXT_AREA" style="padding-bottom:24px"><div id="textarea-error"><div class="e4y1ay4 dir dir-ltr"><div class="e1bg2my dir dir-ltr"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 12px; width: 12px; fill: currentcolor;"><path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zm0 10.2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm.8-6.6H7.2v5.2h1.6z"></path></svg></div>Please add a message.</div></div><div><div class="_1on2i2qy"><div dir="ltr"><textarea aria-describedby="textarea-error" aria-label="Message the host" aria-required="true" name="contactHostMessage" autocomplete="off" class="_3u8xhn" id="contactHostMessage" placeholder="" style="height: 116px;" spellcheck="false" aria-invalid="true"></textarea></div></div></div></div>
                                               </div>
                                             </div>
                                             <div class="flex-before-after dir dir-ltr">
