Add keyboard shortcuts modal

--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -15290,7 +15290,7 @@
           </div>
         </div>
         <div class="_rut4we">
-          <div class="_owkz1m"><button aria-label="Open the keyboard shortcuts panel" type="button"
+          <div class="_owkz1m"><button data-modal="#keyboard-shortcuts-modal" aria-label="Open the keyboard shortcuts panel" type="button"
               class="_1qi0sj8"><span class="_e296pg"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                   aria-hidden="true" role="presentation" focusable="false"
                   style="display: block; height: 24px; width: 24px; fill: currentcolor;">
@@ -33848,6 +33848,64 @@
         </div>
       </section>
       <div class="container__border-0">
+        <div aria-live="polite" aria-atomic="true"></div>
+        <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
+    <!-- keyboard shortcuts modal -->
+    <div id="keyboard-shortcuts-modal" class="hidden" dir="ltr">
+      <div class="_1t0jy5tw"></div>
+      <section>
+        <div class="_vxvq8x" data-testid="modal-container">
+          <div class="_z4lmgp">
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+            <div class="_z4lmgp">
+              <div role="dialog" aria-label="Keyboard shortcuts" aria-modal="true" class="_1pusc02v"
+                style="position: relative;">
+                <div class="_8qxe72">
+                  <header class="_xbompo" tabindex="0">Keyboard shortcuts</header>
+                  <ul class="_5bnvls">
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Enter key," role="img">↵</span></div>
+                      <div class="_mdeyt9">Select the date in focus</div>
+                    </li>
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Right and left arrow keys,"
+                          role="img">←/→</span></div>
+                      <div class="_mdeyt9">Move backward (left) and forward (right) by one day</div>
+                    </li>
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Up and down arrow keys," role="img">↑/↓</span>
+                      </div>
+                      <div class="_mdeyt9">Move backward (up) and forward (down) by one week</div>
+                    </li>
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Page up and page down keys,"
+                          role="img">PgUp/PgDn</span></div>
+                      <div class="_mdeyt9">Switch months</div>
+                    </li>
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Home and end keys," role="img">Home/End</span>
+                      </div>
+                      <div class="_mdeyt9">Go to the first or last day of a week</div>
+                    </li>
+                    <li class="_dj4nch">
+                      <div class="_6oj9h5"><span class="_14tod1h" aria-label="Question mark," role="img">?</span></div>
+                      <div class="_mdeyt9">Open this panel</div>
+                    </li>
+                  </ul>
+                  <footer class="_7i2ej1"><button data-button="close" aria-label="Close the shortcuts panel" type="button"
+                      class="_za4ekfm">Back
+                      to calendar</button></footer>
+                </div>
+              </div>
+            </div>
+            <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+          </div>
+        </div>
+      </section>
+      <div class="_b21f4g">
         <div aria-live="polite" aria-atomic="true"></div>
         <div aria-live="assertive" aria-atomic="true"></div>
       </div>
