fx no 3. C & D - apply modal help - both mobile and desktop

--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -127,6 +127,7 @@
                           aria-label="Help"
                           class="become-a-host__m-help-btn"
                           type="button"
+                          id="open-modal-help-m"
                         >
                           <div class="become-a-host__m-help-content">
                             <div>Help</div>
@@ -137,7 +138,7 @@
                         </button>
                       </div>
                       <div class="become-a-host__help-wrapper">
-                        <button class="become-a-host__help-btn" type="button">
+                        <button class="become-a-host__help-btn" id="open-modal-help" type="button">
                           <div class="become-a-host__help-content">
                             <div>Help</div>
                             <span aria-hidden="true" class="become-a-host__help-span"
