--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -325,6 +325,7 @@
                           aria-label="Help"
                           class="_1mrn1d1"
                           type="button"
+                          id="open-modal-help-m"
                         >
                           <div class="become-a-host__m-help-content">
                             <div>Help</div>
@@ -335,7 +336,7 @@
                         </button>
                       </div>
                       <div class="become-a-host__help-wrapper">
-                        <button class="become-a-host__help-btn" type="button">
+                        <button class="become-a-host__help-btn" id="open-modal-help" type="button">
                           <div class="become-a-host__help-content">
                             <div>Help</div>
                             <span aria-hidden="true" class="become-a-host__help-span"
@@ -941,6 +942,110 @@ Cheerful private villa with pool</textarea
        <div aria-live="assertive" aria-atomic="true"></div>
       </div>
     </div>
+
+    <div dir="ltr">
+      <div class="_1t0jy5tw hidden help-backdrop"></div>
+      <section>
+       <div class="_1p1cugo hidden" data-testid="modal-container">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Help" aria-modal="true" class="modal-help _o4zczix" style="position: relative;">
+           <div class="_m4pg2z">
+            <button aria-label="Close" type="button" class="_4ijurz" id="close-modal-help">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: rgb(255, 255, 255); stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <header class="_y74zq">
+            <div class="_1tng6ym"></div>
+            <div class="_9t7ktw">
+             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+              <div class="_1q9sh65"><span class="_13lde72">Help</span></div>
+             </h1>
+            </div>
+            <div class="_rrmdgl"></div>
+           </header>
+           <div class="_1wg7rw">
+            <div class="_4y54ze" style="animation-delay: 250ms;">
+             <section>
+              <div class="_kedp3u"><h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Ask a Superhost</h2></div>
+              <div class="_lvhhqo">
+               <button type="button" class="_15ut2yit">
+                <span class="_jr600v">
+                 <span class="_1wiynur">
+                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
+                   <img
+                    class="_9ofhsl"
+                    aria-hidden="true"
+                    alt=""
+                    decoding="async"
+                    elementtiming="LCP-target"
+                    src="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
+                    data-original-uri="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
+                    style="object-fit: cover; vertical-align: bottom; border-radius: 50%;"
+                   />
+                   <div class="_15p4g025" style="background-image: url('https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium'); background-size: cover; border-radius: 50%;"></div>
+                  </div>
+                 </span>
+                 <span class="_bc4egv">
+                  <div class="_f9uxok">Message Myrna</div>
+                  <div class="_1cecj8q">Get personalized answers from this experienced Host</div>
+                 </span>
+                </span>
+               </button>
+              </div>
+             </section>
+            </div>
+            <div class="_4y54ze" style="animation-delay: 400ms;">
+             <section>
+              <div class="_kedp3u"><h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">Read our best tips</h2></div>
+              <div class="_lvhhqo">
+               <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/resources/hosting-homes/a/how-to-define-what-kind-of-space-youre-hosting-361" class="_tx7p69r">
+                <div class="_v0gz4uz" style="--dls-liteimage-padding-top: 55.9633%;">
+                 <div class="_4626ulj">
+                  <img
+                   class="_91slf2a"
+                   aria-hidden="true"
+                   alt=""
+                   decoding="async"
+                   elementtiming="LCP-target"
+                   src="https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg"
+                   data-original-uri="https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg"
+                   style="object-fit: cover; object-position: center center;"
+                  />
+                  <div class="_10xjrv2u" style="background-image: url('https://a0.muscache.com/im/pictures/beb16c28-11d4-4033-be7e-19d6baada826.jpg'); background-size: cover;"></div>
+                 </div>
+                </div>
+                <span class="_1cfbqt9" role="text"><span class="_x4r3u7">How to define what kind of space you’re hosting</span><span class="_wfgfvf">1 min read</span></span>
+               </a>
+              </div>
+             </section>
+            </div>
+           </div>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+
   </body>
   <script src="../assets/js/pages/become-a-host.js" defer></script>
 </html>
