--- a/become-a-host/property-type.html
+++ b/become-a-host/property-type.html
@@ -77,6 +77,7 @@
                           aria-label="Close"
                           type="button"
                           class="become-a-host__close-btn"
+                          id="open-modal-save-exit-m"
                         >
                           <span class="relative-opacity">
                             <svg
@@ -151,7 +152,7 @@
                   </div>
                   <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
-                      <button class="become-a-host__help-btn" type="button">
+                      <button class="become-a-host__help-btn" type="button" id="open-modal-save-exit">
                         <div class="become-a-host__help-content">
                           <div>Save and exit</div>
                           <span aria-hidden="true" class="become-a-host__help-span"
@@ -880,6 +881,57 @@
              </section>
             </div>
            </div>
+          </div>
+         </div>
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+        </div>
+       </div>
+      </section>
+      <div class="_b21f4g">
+       <div aria-live="polite" aria-atomic="true"></div>
+       <div aria-live="assertive" aria-atomic="true"></div>
+      </div>
+    </div>
+    
+    <div dir="ltr">
+      <div class="_1t0jy5tw save-exit-backdrop hidden"></div>
+      <section>
+       <div class="_g2ext save-exit-modal-container hidden" data-testid="modal-container">
+        <div class="_z4lmgp">
+         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
+         <div class="_z4lmgp">
+          <div role="dialog" aria-label="Are you sure you want to exit?" aria-modal="true" class="modal-save-exit _1m9khubh" style="position: relative;">
+           <div class="_1wv4knt">
+            <button aria-label="Close" type="button" class="_oda838" id="close-modal-save-exit">
+             <span class="_e296pg">
+              <svg
+               viewBox="0 0 32 32"
+               xmlns="http://www.w3.org/2000/svg"
+               aria-hidden="true"
+               role="presentation"
+               focusable="false"
+               style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 3; overflow: visible;"
+              >
+               <path d="m6 6 20 20"></path>
+               <path d="m26 6-20 20"></path>
+              </svg>
+             </span>
+            </button>
+           </div>
+           <header class="_1c8aprq">
+            <div class="_1tng6ym"></div>
+            <div class="_9t7ktw">
+             <h1 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target"><div class="_1q9sh65">Are you sure you want to exit?</div></h1>
+            </div>
+            <div class="_rrmdgl"></div>
+           </header>
+           <div class="_12kfhdn"><div class="_3joskp">Your progress up until now has been saved.</div></div>
+           <footer class="_zgc1p6">
+            <div class="_1gty68l">
+             <button type="button" class="_15rpys7s">Exit</button>
+             <div class="_1m110ux"><button type="button" class="_148dgdpk">Keep working</button></div>
+            </div>
+           </footer>
           </div>
          </div>
          <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
